wazuh/indexer_stack/wazuh-indexer/indexer-svc.yaml
# Copyright (C) 2019, Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Indexer service: Communications

apiVersion: v1
kind: Service
metadata:
  name: wazuh-indexer
  namespace: wazuh
  labels:
    app: wazuh-indexer
spec:
  selector:
    app: wazuh-indexer
  ports:
    - name: indexer-nodes
      port: 9300
      targetPort: 9300
    - name: indexer-rest
      port: 9200
      targetPort: 9200
  clusterIP: None
  # The indexer nodes resolve each other before any of them is ready.
  publishNotReadyAddresses: true
