wazuh/indexer_stack/wazuh-indexer/indexer-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: indexer-egress
  namespace: wazuh
spec:
  podSelector:
    matchLabels:
      app: wazuh-indexer
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: wazuh-indexer
    ports:
    - protocol: TCP
      port: 9300
  - to:
    - podSelector:
        matchLabels:
          app: wazuh-indexer
    ports:
    - protocol: TCP
      port: 9200
